Updating the project with the repository pattern and have already done the database connection and migrations.

--- a/LojaMicro/LojaMicro.ApiProduto/appsettings.json
+++ b/LojaMicro/LojaMicro.ApiProduto/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;DataBase=LojaMicroDB;Uid=root;Pwd=banana123"
+    "DefaultConnection": "Server=localhost;DataBase=appshop;Uid=root;Password=1234"
   },
   
   "Logging": {
