Add IdentityServer and Database IdentityServer

--- a/LojaMicro/LojaMicro.IdentityServer/appsettings.json
+++ b/LojaMicro/LojaMicro.IdentityServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;DataBase=appshopidentityserver;Uid=root;Password=1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
