Long commit of authentication and authorization

--- a/LojaMicro/LojaMicro.Web/appsettings.json
+++ b/LojaMicro/LojaMicro.Web/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ServiceUri": {
-    "ProductApi": "https://localhost:7265"
+    "ProductApi": "https://localhost:7265",
+    "IdentityServer": "https://localhost:7177"
+  },
+  "Client": {
+    "Secret": "abracadabra#simsalabim"
   }
 }
