--- a/LojaMicro/LojaMicro.ApiProduto/appsettings.json
+++ b/LojaMicro/LojaMicro.ApiProduto/appsettings.json
@@ -2,14 +2,17 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;DataBase=appshop;Uid=root;Password=1234"
   },
-  
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "VShop.IdentityServer": {
+    "ApplicationUrl": "https://localhost:7177/"
+  }
 }
 
 
