--- a/LojaMicro/LojaMicro.Web/appsettings.json
+++ b/LojaMicro/LojaMicro.Web/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ServiceUri": {
     "ProductApi": "https://localhost:7265",
-    "IdentityServer": "https://localhost:7177"
+    "IdentityServer": "https://localhost:7177/"
   },
   "Client": {
     "Secret": "abracadabra#simsalabim"
